# tech-talk-api-comparison

./: .gitignore
node/: package.json  pnpm-lock.yaml  tsconfig.json
node/drizzle/: 0000_jazzy_mongu.sql
node/drizzle/meta/: 0000_snapshot.json  _journal.json
node/src/: index.ts
rust/: Cargo.toml
rust/.sqlx/: query-0c65c6f66e0116b21c466103a9a7b2ec61ee198f92ece3009ee468c80ff30014.json
rust/migrations/: 20230919232111_init.sql
rust/src/: main.rs
