[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features=false
features=[
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

